--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
-h3{color: blue;
+h3{
+    color: blue;
 
 }
-p{color:black;
+p{
+    color:black;
+    font-size: 72px;
+
+
+}
+li{
+    font-size: 42px;
+
+
+
+}
+a{
+    font-size: 50px;
+
+
+
 
 
 }
